--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "latest",
     "angular-mocks": "latest",
+    "angular-ui-router": "latest",
     "d3": "latest",
     "sanitize-css": "latest"
   }
